...
          key: Key("gestureDetector"),
          child: Stack(
            key: Key("stackForColorIndicator"),
            alignment: Alignment.center,
            children: [
              ColorIndicator(
                key: Key("colorIndicator"),
                width: double.infinity,
                color: color,
              ),
              Text(
                AppLocalizations.of(context)!.selectColor,
                style: TextStyle(
...
